record another color

--- a/Firefox/css/stylish/插件变色.css
+++ b/Firefox/css/stylish/插件变色.css
@@ -5,4 +5,8 @@
   {
     background-color:#E1EFEB !important;
   }
+  .nga_plug_tab_menu_close
+  {
+    background-color:#F0F7F5 !important;
+  }
 }
