add and modify for css and js

--- a/Firefox/css/stylish/插件变色.css
+++ b/Firefox/css/stylish/插件变色.css
@@ -1,6 +1,6 @@
 ﻿@namespace url(http://www.w3.org/1999/xhtml);
 
-@-moz-document domain("club.178.com") {
+@-moz-document domain("club.178.com"),domain("nga.178.com"),domain("bbs.nga.cn"){
   .nga_plug_tab_menu_close,.nga_plug_tab_main,.nga_plug_tab_menu_open,.nga_edit_table,#nga_edit_quickmojo,#nga_edit_PreviewImgDiv
   {
     background-color:#E1EFEB !important;
