--- a/Firefox/css/stylish/qidian.css
+++ b/Firefox/css/stylish/qidian.css
@@ -1,4 +1,4 @@
-﻿@namespace url(http://www.w3.org/1999/xhtml);
+@namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain("qidian.com") {
     input[type=button],input[type=submit]
@@ -31,5 +31,9 @@
     {
          margin-left:-100px;
          width:900px !important;
+    }
+    div.text *
+    {
+        font-size:18px !important;
     }
 }
